wx-base/src/generated/ffi_d.rs

    pub fn wxDateTime_ToTimezone(
        self_: *const c_void,
        tz: *const c_void,
        no_dst: bool,
    ) -> *mut c_void;
    pub fn wxDateTime_ToUTC(self_: *const c_void, no_dst: bool) -> *mut c_void;
    pub fn wxDateTime_ConvertYearToBC(year: c_int) -> c_int;
    pub fn wxDateTime_GetAmPmStrings(am: *mut c_void, pm: *mut c_void);
    // NOT_SUPPORTED: pub fn wxDateTime_GetBeginDST(year: c_int, country: Country) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetEndDST(year: c_int, country: Country) -> *mut c_void;
    pub fn wxDateTime_GetCentury1(year: c_int) -> c_int;
    // NOT_SUPPORTED: pub fn wxDateTime_GetCountry() -> Country;
    // NOT_SUPPORTED: pub fn wxDateTime_GetCurrentMonth(cal: Calendar) -> Month;
    // NOT_SUPPORTED: pub fn wxDateTime_GetCurrentYear(cal: Calendar) -> c_int;
    // NOT_SUPPORTED: pub fn wxDateTime_GetEnglishMonthName(month: Month, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetEnglishWeekDayName(weekday: WeekDay, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetMonthName(month: Month, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetNumberOfDays(year: c_int, cal: Calendar) -> wxDateTime_t;
    // NOT_SUPPORTED: pub fn wxDateTime_GetNumberOfDays1(month: Month, year: c_int, cal: Calendar) -> wxDateTime_t;
    // NOT_SUPPORTED: pub fn wxDateTime_GetTimeNow() -> time_t;
    // BLOCKED: pub fn wxDateTime_GetTmNow(tm: *mut c_void) -> *mut c_void;
    pub fn wxDateTime_GetTmNow1() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetWeekDayName(weekday: WeekDay, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_IsDSTApplicable(year: c_int, country: Country) -> bool;
    pub fn wxDateTime_GetFirstWeekDay(first_day: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxDateTime_IsLeapYear(year: c_int, cal: Calendar) -> bool;
    // NOT_SUPPORTED: pub fn wxDateTime_IsWestEuropeanCountry(country: Country) -> bool;
    pub fn wxDateTime_Now() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_SetCountry(country: Country);
    // NOT_SUPPORTED: pub fn wxDateTime_SetToWeekOfYear(year: c_int, num_week: wxDateTime_t, weekday: WeekDay) -> *mut c_void;
    pub fn wxDateTime_Today() -> *mut c_void;
    pub fn wxDateTime_UNow() -> *mut c_void;

}
